# layout-gan

./: README.md  main.py  pyproject.toml
test/: test_mnistlayout.py  test_trainmnistlayout.py
test/generator_model/: events.out.tfevents.1640573905.64-14864.15957.0
test/relationbasedD/: events.out.tfevents.1640585674.64-14864.21714.0
utils/: discriminator.py  generator.py  layout_gan.py  mnistlayout.py  render_layer.py  tool.py  train_mnistlayout.py
wandb/: latest-run
wandb/run-20211228_111517-21sbidi1/: run-21sbidi1.wandb
wandb/run-20211228_111517-21sbidi1/files/: config.yaml  requirements.txt  wandb-metadata.json
