[tool.poetry]
name = "layout-gan"
version = "0.1.0"
description = ""
authors = ["Nonaka Kenya <k.nonaka@opt.ne.jp>"]

[tool.poetry.dependencies]
python = "3.9.*"
matplotlib = "^3.5.1"
numpy = "^1.21.5"
pandas = "^1.3.5"
tqdm = "^4.62.3"
torch = "^1.10.1"
torchvision = "^0.11.2"
tensorboard = "^2.7.0"
self-attention-cv = "^1.2.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
